Resolved defect #698684 - noticed this was working correctly, but fixed alignment issues of checkbox and radio buttons

--- a/webroot/skin/frontend/base/default/css/blueacorn-best-practice.css
+++ b/webroot/skin/frontend/base/default/css/blueacorn-best-practice.css
@@ -299,5 +299,5 @@ body.checkout-onepage-index #checkoutSteps div[id$="-progress-opcheckout"] {
 /*# sourceMappingURL=blueacorn-best-practice.css.map */
 
 .name-lastname { clear: both; }
-.form-list li.control { clear: both; }
+.form-list li.control { clear: both; margin-left: 20px; }
 .opc select { max-width: 100% !important; }
